Resolved issue of tags being too wide

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -46,4 +46,17 @@ page-profile {
         margin: 0;
     }
 
+    .tag-container {
+        margin-right: 2px;
+        padding: 2px;
+    }
+
+    .tag-content-w-btn {
+        margin-left: 0px;
+    }
+    
+    .tag-content-wo-btn {
+        margin-left: 0px;
+    }
+
 }
